--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "firebase": "^10.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-id-swiper": "^4.0.0",
     "react-router-dom": "^6.21.1",
     "react-scripts": "5.0.1",
     "sass": "^1.70.0",
+    "swiper": "^9.0.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
